fix(core): 🐛 hide sidebar lastmod on tablet
It is duplicated with footer

--- a/resources/skins.citizen.styles/components/ContentSidebar.less
+++ b/resources/skins.citizen.styles/components/ContentSidebar.less
@@ -23,3 +23,10 @@
 		border-radius: var( --border-radius--small );
 	}
 }
+
+#citizen-sidebar-lastmod {
+	@media ( max-width: @max-width-breakpoint-tablet ) {
+		// Duplicated with footer already
+		display: none;
+	}
+}
